--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
       <div class="row mt-5">
         <div class="d-flex justify-content-center align-items-center text-center flex-column mx-auto">
           <span class="d-block text-light">© Copyright <strong>Portfolio</strong>. All Right Reserved</span>
-          <small class="d-block text-light font-weight-light"><b class="font-weight-bold">Designed By</b> Candra Dwi Cahyo</small>
+          <small class="d-block text-light font-weight-light"><b class="font-weight-bold">Designed By</b> Eka Paksi</small>
         </div>
       </div>
     </div>
