--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <head>
 <title>Untukmu - Script HTML buat Kamu</title>
-<meta name="description" content="@feelthisray - Script by Feeldream Repl Co">
+<meta name="description" content="">
 </head>
 <body>
 	
