--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script><script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script><link rel="stylesheet" href="https://feeldreams.github.io/buatsayangku/style.css"><script src="https://unpkg.com/scrollreveal"></script>
 
 <head>
-<title>Untukmu - Script HTML buat Kamu</title>
+<title>Spesial Untukmu</title>
 <meta name="description" content="">
 </head>
 <body>
