--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 
 <link rel="icon" type="image/svg+xml" href="https://feeldreams.github.io/main-icon.png"> 
 <link rel="apple-touch-icon" href="https://feeldreams.github.io/main-icon.png"><script src="https://punyasesuatu.htmlku.repl.co/script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script><script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script><link rel="stylesheet" href="https://feeldreams.github.io/buatsayangku/style.css"><script src="https://unpkg.com/scrollreveal"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js">
+	
+</script><script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
+<link rel="stylesheet" href="style.css">
+<script src="https://unpkg.com/scrollreveal"></script>
 
 <head>
 <title>Spesial Untukmu</title>
